# data-science-agent-adk

./: .gitignore  pyproject.toml  requirements.txt
_sandbox/: clean_customers.parquet  clean_sample.parquet  customers-1000.csv  sample.csv
_sandbox/.adk/: session.db
analysis_agent/: agent.py  critic_agent.py  data_engineer.py  data_tools.py  stats_agent.py  supervisor.py
analysis_agent/.adk/: session.db
app/.adk/: session.db
app/analysis_agent/: agent.py  eval_set_1.evalset.json
app/analysis_agent/.adk/: session.db
app/analysis_agent/critic_agent/: agent.py  tools.py
app/analysis_agent/data_engineer/: agent.py  tools.py
app/analysis_agent/stats_agent/: agent.py  tools.py
